# tonic-drop

./: Cargo.toml  build.rs  shell.nix
proto/: drop.proto
src/: main.rs
