[package]
name = "tonic-drop"
version = "0.1.0"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tonic = "0.4.0"
prost = "0.7.0"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }
